--- a/css/main.scss
+++ b/css/main.scss
@@ -47,13 +47,6 @@ hr {
 	margin: 0;
 }
 
-.section-header {
-	font-family: Lato;
-	font-size: 25px;
-	padding: 20px 0 20px 175px;
-
-}
-
 .wrap {
    overflow: hidden;
    margin-top: -2px;
@@ -202,4 +195,384 @@ body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleB
 .footer a {
 	color: white;
 	text-decoration: none;
+}
+
+/*******************************************************
+					MEDIA QUERIES
+*******************************************************/
+
+@media (min-width: 320px) {
+	.section-header {
+		font-family: Lato;
+		font-size: 20px;
+		padding: 20px 0 20px 30px;
+	}
+
+	.eamon {
+		margin-top: 50px;
+		margin-left: 30px;
+		display: inline-block;
+		float: left;
+		padding-bottom: 0px;
+	}
+
+	.eamon img {
+		width: 270px;
+	}
+
+	.fname {
+		position: absolute;
+		color: white;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-top: 310px;
+		padding-left: 40px;
+		text-shadow: 3px 3px 15px #000000;
+	}
+
+	.lname {
+		color: black;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-left: 40px;
+	}
+
+	.bio {
+		margin: 20px 50px 0 30px;
+		font-family: Lato;
+		font-size: 16px;
+		clear: both;
+		padding-bottom: 40px;
+	}
+
+	.bird img {
+		width: 150px;
+		padding-bottom: 100px;
+	}
+
+	.title {
+		font-size: 25px;
+		font-family: Lato;
+		margin: 150px 0 0 30px;
+	}
+
+	.dot {
+		margin: 15px 0 0 35px;
+	}
+
+	#logo {
+		padding-left: 30px;
+	}
+}
+
+
+@media (min-width: 400px) {
+	.section-header {
+		font-family: Lato;
+		font-size: 20px;
+		padding: 20px 0 20px 30px;
+	}
+
+	.eamon {
+		margin-top: 50px;
+		margin-left: 30px;
+		display: inline-block;
+		float: left;
+		padding-bottom: 0px;
+	}
+
+	.eamon img {
+		width: 300px;
+	}
+
+	.fname {
+		position: absolute;
+		color: white;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-top: 340px;
+		padding-left: 40px;
+		text-shadow: 3px 3px 15px #000000;
+	}
+
+	.lname {
+		color: black;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-left: 40px;
+	}
+
+	.bio {
+		margin: 20px 50px 0 30px;
+		font-family: Lato;
+		font-size: 16px;
+		clear: both;
+		padding-bottom: 40px;
+	}
+
+	.bird img {
+		width: 200px;
+	}
+
+	.title {
+		font-size: 25px;
+		font-family: Lato;
+		margin: 150px 0 0 30px;
+	}
+
+	.dot {
+		margin: 15px 0 0 35px;
+	}
+
+	#logo {
+		padding-left: 30px;
+	}
+}
+
+/* Larger than phablet (also point when grid becomes active) */
+@media (min-width: 550px) {
+	.section-header {
+		font-family: Lato;
+		font-size: 20px;
+		padding: 20px 0 20px 30px;
+	}
+
+	.eamon {
+		margin-top: 50px;
+		margin-left: 30px;
+		display: inline-block;
+		float: left;
+		padding-bottom: 20px;
+	}
+
+	.eamon img {
+		width: 300px;
+	}
+
+	.fname {
+		position: absolute;
+		color: white;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-top: 60px;
+		padding-left: 160px;
+		text-shadow: 3px 3px 15px #000000;
+	}
+
+	.lname {
+		color: black;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-top: 60px;
+	}
+
+	.bio {
+		margin: 20px 100px 0 30px;
+		font-family: Lato;
+		font-size: 16px;
+		clear: both;
+		padding-bottom: 40px;
+	}
+
+	.bird img {
+		width: 300px;
+	}
+
+	.title {
+		font-size: 30px;
+		font-family: Lato;
+		margin: 200px 0 0 30px;
+	}
+
+	.dot {
+		margin: 15px 0 0 35px;
+	}
+
+	#logo {
+		padding-left: 30px;
+	}
+}
+
+/* Larger than tablet */
+@media (min-width: 750px) {
+	.section-header {
+		font-family: Lato;
+		font-size: 22px;
+		padding: 20px 0 20px 100px;
+	}
+
+	.eamon {
+		margin-top: 50px;
+		margin-left: 100px;
+		display: inline-block;
+		float: left;
+		padding-bottom: 20px;
+	}
+
+	.eamon img {
+		width: 300px;
+	}
+
+	.fname {
+		position: absolute;
+		color: white;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-top: 60px;
+		padding-left: 230px;
+		text-shadow: 3px 3px 15px #000000;
+	}
+
+	.lname {
+		color: black;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-top: 60px;
+	}
+
+	.bio {
+		margin: 20px 100px 0 100px;
+		font-family: Lato;
+		font-size: 16px;
+		clear: both;
+		padding-bottom: 40px;
+	}
+
+	.bird img {
+		width: 400px;
+	}
+
+	.title {
+		font-size: 40px;
+		font-family: Lato;
+		margin: 275px 0 0 100px;
+	}
+
+	.dot {
+		margin: 15px 0 0 105px;
+	}
+
+	#logo {
+		padding-left: 100px;
+	}
+}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {
+	.bio {
+		margin: 20px 50px 0 600px;
+		font-family: Lato;
+		font-size: 16px;
+		clear: none;
+	}
+
+	.eamon {
+		margin-top: 50px;
+		margin-left: 175px;
+		display: inline-block;
+		float: left;
+		padding-bottom: 50px;
+	}
+
+	.eamon img {
+		width: 375px;
+	}
+
+	.fname {
+		position: absolute;
+		color: white;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-top: 60px;
+		padding-left: 380px;
+		text-shadow: 3px 3px 15px #000000;
+	}
+
+	.lname {
+		color: black;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-top: 60px;
+	}
+
+	.bird img {
+		width: 450px;
+	}
+
+	.home-left {
+		float: left;
+	}
+
+	.title {
+		font-size: 50px;
+		font-family: Lato;
+		margin: 275px 0 0 175px;
+	}
+
+	.dot {
+		margin: 15px 0 0 185px;
+	}
+
+	.dot img {
+		padding-right: 20px;
+	}
+
+	.section-header {
+		font-family: Lato;
+		font-size: 25px;
+		padding: 20px 0 20px 175px;
+	}
+
+	#logo {
+		padding-left: 175px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.bird img {
+		width: 600px;
+		float: right;
+		margin-top: 150px;
+	}
+
+	.home-left {
+		float: left;
+	}
+
+	.title {
+		font-size: 50px;
+		font-family: Lato;
+		margin: 275px 0 0 175px;
+	}
+
+	.dot {
+		margin: 15px 0 0 185px;
+	}
+
+	.dot img {
+		padding-right: 20px;
+	}
+
+	.bio {
+		margin: 40px 150px 0 600px;
+		font-family: Lato;
+		font-size: 18px;
+	}
+
+	.fname {
+		position: absolute;
+		color: white;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-top: 60px;
+		padding-left: 380px;
+		text-shadow: 3px 3px 15px #000000;
+	}
+
+	.lname {
+		color: black;
+		font-family: GothamBold;
+		font-size: 40px;
+		padding-top: 60px;
+	}
 }
